--- a/mockup/tourneyView.html
+++ b/mockup/tourneyView.html
@@ -9,44 +9,44 @@
 	<ul class="round round-1">
 		<li class="spacer">&nbsp;</li>
 		
-		<li class="game game-top winner"><span id=7home>1. Dunk It Like It's Hot</span> <span class="score">79</span></li>
+		<li class="game game-top winner"><span id=7home>1. Dunk It Like It's Hot</span> <span class="score" id="7hscore">79</span></li>
 		<li class="game game-spacer">&nbsp;</li>
-        <li class="game game-bottom "><span id=7away>8. Ball is Life</span> <span class ="score">48</span></li>
+        <li class="game game-bottom "><span id=7away>8. Ball is Life</span> <span class ="score" id="7ascore">48</span></li>
 		<li class="spacer">&nbsp;</li>
 		
-		<li class="game game-top winner"><span id=8home>3. Acca Ballers</span> <span class = "score">84</span></li>
+		<li class="game game-top winner"><span id=8home>3. Acca Ballers</span> <span class = "score" id="8hscore">84</span></li>
 		<li class="game game-spacer">&nbsp;</li>
-		<li class="game game-bottom "><span id=8away>6. PJ Was the Rage</span> <span class="score">72</span></li>
+		<li class="game game-bottom "><span id=8away>6. PJ Was the Rage</span> <span class="score" id="8ascore">72</span></li>
 		<li class="spacer">&nbsp;</li>
 		
-		<li class="game game-top "><span id=9home>4. Ballin' On a Budget</span> <span class="score">55</span></li>
+		<li class="game game-top "><span id=9home>4. Ballin' On a Budget</span> <span class="score" id="9hscore">55</span></li>
 		<li class="game game-spacer">&nbsp;</li>
-		<li class="game game-bottom winner"><span id=9away>5. Hoop There It Is</span> <span class ="score">68</span></li>
+		<li class="game game-bottom winner"><span id=9away>5. Hoop There It Is</span> <span class ="score"  id="9ascore">68</span></li>
 		<li class="spacer">&nbsp;</li>
 		
-		<li class="game game-top winner"><span id=10home>2. Do the John Wall</span> <span class="score">64</span></li>
+		<li class="game game-top winner"><span id=10home>2. Do the John Wall</span> <span class="score"  id="10hscore">64</span></li>
 		<li class="game game-spacer">&nbsp;</li>
-		<li class="game game-bottom "><span id=10away>7. J's On My Feet </span><span class="score">44</span></li>
+		<li class="game game-bottom "><span id=10away>7. J's On My Feet </span><span class="score" id="10ascore">44</span></li>
 		<li class="spacer">&nbsp;</li>
 		
-		<li class="game game-top winner"><span id=11home>1. Toon Squad </span><span class="score">54</span></li>
+		<li class="game game-top winner"><span id=11home>1. Toon Squad </span><span class="score"  id="11hscore">54</span></li>
 		<li class="game game-spacer">&nbsp;</li>
-		<li class="game game-bottom "><span id=11away>8. Wanna Be Like Mike</span> <span class="score">52</span></li>
+		<li class="game game-bottom "><span id=11away>8. Wanna Be Like Mike</span> <span class="score"  id="11score">52</span></li>
 		<li class="spacer">&nbsp;</li>
 		
-		<li class="game game-top winner"><span id=12home>3. Air Buds</span> <span class="score">65</span></li>
+		<li class="game game-top winner"><span id=12home>3. Air Buds</span> <span class="score" id="12hscore">65</span></li>
 		<li class="game game-spacer">&nbsp;</li>
-		<li class="game game-bottom "><span id=12away>6. Jump Ballers</span> <span class="score">54</span></li>
+		<li class="game game-bottom "><span id=12away>6. Jump Ballers</span> <span class="score" id="12ascore">54</span></li>
 		<li class="spacer">&nbsp;</li>
 		
-		<li class="game game-top winner"><span id=13home>4. Marcus is Our Spirit Animal</span> <span class="score">67</span></li>
+		<li class="game game-top winner"><span id=13home>4. Marcus is Our Spirit Animal</span> <span class="score" id="13hscore">67</span></li>
 		<li class="game game-spacer">&nbsp;</li>
-		<li class="game game-bottom "><span id=13away>5. Make It Rain</span> <span class="score">63</span></li>
+		<li class="game game-bottom "><span id=13away>5. Make It Rain</span> <span class="score" id="13ascore">63</span></li>
 		<li class="spacer">&nbsp;</li>
 		
-		<li class="game game-top winner"><span id=14home>2. All Americans </span><span class="score">73</span></li>
+		<li class="game game-top winner"><span id=14home>2. All Americans </span><span class="score" id="14hscore">73</span></li>
 		<li class="game game-spacer">&nbsp;</li>
-		<li class="game game-bottom "><span id=14away>7. We Will Rock You</span> <span class="score">61</span></li>
+		<li class="game game-bottom "><span id=14away>7. We Will Rock You</span> <span class="score" id="14ascore">61</span></li>
 		<li class="spacer">&nbsp;</li>
 	</ul>
 	<ul class="round round-2">
@@ -95,19 +95,7 @@
 		<li class="spacer">&nbsp;</li>
 	</ul>		
 </main>
- 
-<table id=tourney_table_view>
-    <tr id=list_header><th>Game 1</th></tr>
-    <tr id="home">
-        <th id="home_name">Home team</th>
-        <th id="home_score">Score</th>
-    </tr>
-    <tr id="away">
-        <th id="away_name">Away team</th>
-        <th id="away_score">Away score</th>
-    </tr>
-</table>
-
+ <h2>Pool Matches</h2>
 <div id="pool_container"></div>
 <!-- <script>
 var service = 'wwp.cs.unc.edu/Courses/426-f16/users/tgreer/getTournament.php?id=16';
