--- a/mockup/tourneyView.html
+++ b/mockup/tourneyView.html
@@ -10,91 +10,91 @@
 	<ul class="round round-1">
 		<li class="spacer">&nbsp;</li>
 		
-		<li class="game game-top winner"><span id=7home>1. Dunk It Like It's Hot</span> <span class="score" id="7hscore">79</span></li>
+		<li class="game game-top winner"><span id=7home></span> <span class="score" id="7hscore"></span></li>
 		<li class="game game-spacer">&nbsp;</li>
-        <li class="game game-bottom "><span id=7away>8. Ball is Life</span> <span class ="score" id="7ascore">48</span></li>
+        <li class="game game-bottom "><span id=7away></span> <span class ="score" id="7ascore"></span></li>
 		<li class="spacer">&nbsp;</li>
 		
-		<li class="game game-top winner"><span id=8home>3. Acca Ballers</span> <span class = "score" id="8hscore">84</span></li>
+		<li class="game game-top winner"><span id=8home></span> <span class = "score" id="8hscore"></span></li>
 		<li class="game game-spacer">&nbsp;</li>
-		<li class="game game-bottom "><span id=8away>6. PJ Was the Rage</span> <span class="score" id="8ascore">72</span></li>
+		<li class="game game-bottom "><span id=8away></span> <span class="score" id="8ascore"></span></li>
 		<li class="spacer">&nbsp;</li>
 		
-		<li class="game game-top "><span id=9home>4. Ballin' On a Budget</span> <span class="score" id="9hscore">55</span></li>
+		<li class="game game-top "><span id=9home></span> <span class="score" id="9hscore"></span></li>
 		<li class="game game-spacer">&nbsp;</li>
-		<li class="game game-bottom winner"><span id=9away>5. Hoop There It Is</span> <span class ="score"  id="9ascore">68</span></li>
+		<li class="game game-bottom winner"><span id=9away></span> <span class ="score"  id="9ascore"></span></li>
 		<li class="spacer">&nbsp;</li>
 		
-		<li class="game game-top winner"><span id=10home>2. Do the John Wall</span> <span class="score"  id="10hscore">64</span></li>
+		<li class="game game-top winner"><span id=10home></span> <span class="score"  id="10hscore"></span></li>
 		<li class="game game-spacer">&nbsp;</li>
-		<li class="game game-bottom "><span id=10away>7. J's On My Feet </span><span class="score" id="10ascore">44</span></li>
+		<li class="game game-bottom "><span id=10away></span><span class="score" id="10ascore"></span></li>
 		<li class="spacer">&nbsp;</li>
 		
-		<li class="game game-top winner"><span id=11home>1. Toon Squad </span><span class="score"  id="11hscore">54</span></li>
+		<li class="game game-top winner"><span id=11home></span><span class="score"  id="11hscore"></span></li>
 		<li class="game game-spacer">&nbsp;</li>
 
-		<li class="game game-bottom "><span id=11away>8. Wanna Be Like Mike</span> <span class="score"  id="11score">52</span></li>
+		<li class="game game-bottom "><span id=11away></span> <span class="score"  id="11score"></span></li>
 
 
 		<li class="spacer">&nbsp;</li>
 		
-		<li class="game game-top winner"><span id=12home>3. Air Buds</span> <span class="score" id="12hscore">65</span></li>
+		<li class="game game-top winner"><span id=12home></span> <span class="score" id="12hscore"></span></li>
 		<li class="game game-spacer">&nbsp;</li>
-		<li class="game game-bottom "><span id=12away>6. Jump Ballers</span> <span class="score" id="12ascore">54</span></li>
+		<li class="game game-bottom "><span id=12away></span> <span class="score" id="12ascore"></span></li>
 		<li class="spacer">&nbsp;</li>
 		
-		<li class="game game-top winner"><span id=13home>4. Marcus is Our Spirit Animal</span> <span class="score" id="13hscore">67</span></li>
+		<li class="game game-top winner"><span id=13home></span> <span class="score" id="13hscore"></span></li>
 		<li class="game game-spacer">&nbsp;</li>
-		<li class="game game-bottom "><span id=13away>5. Make It Rain</span> <span class="score" id="13ascore">63</span></li>
+		<li class="game game-bottom "><span id=13away></span> <span class="score" id="13ascore"></span></li>
 		<li class="spacer">&nbsp;</li>
 		
-		<li class="game game-top winner"><span id=14home>2. All Americans </span><span class="score" id="14hscore">73</span></li>
+		<li class="game game-top winner"><span id=14home></span><span class="score" id="14hscore"></span></li>
 		<li class="game game-spacer">&nbsp;</li>
-		<li class="game game-bottom "><span id=14away>7. We Will Rock You</span> <span class="score" id="14ascore">61</span></li>
+		<li class="game game-bottom "><span id=14away></span> <span class="score" id="14ascore"></span></li>
 		<li class="spacer">&nbsp;</li>
 	</ul>
 	<ul class="round round-2">
 		<li class="spacer">&nbsp;</li>
 		
-		<li class="game game-top winner"><span id=3home></span> <span class="score" id="3hscore">82</span></li>
+		<li class="game game-top winner"><span id=3home></span> <span class="score" id="3hscore"></span></li>
 		<li class="game game-spacer">&nbsp;</li>
-		<li class="game game-bottom "><span id=3away></span> <span class="score" id="3ascore">56</span></li>
+		<li class="game game-bottom "><span id=3away></span> <span class="score" id="3ascore"></span></li>
 		<li class="spacer">&nbsp;</li>
 		
-		<li class="game game-top winner"><span id=4home></span> <span class="score" id="4hscore">74</span></li>
+		<li class="game game-top winner"><span id=4home></span> <span class="score" id="4hscore"></span></li>
 		<li class="game game-spacer">&nbsp;</li>
-		<li class="game game-bottom "><span id=4away></span> <span class="score" id="4ascore">57</span></li>
+		<li class="game game-bottom "><span id=4away></span> <span class="score" id="4ascore"></span></li>
 		<li class="spacer">&nbsp;</li>
 		
-		<li class="game game-top "><span id=5home></span> <span class="score" id="5hscore">48</span></li>
+		<li class="game game-top "><span id=5home></span> <span class="score" id="5hscore"></span></li>
 		<li class="game game-spacer">&nbsp;</li>
-		<li class="game game-bottom winner"><span id=5away></span> <span class="score" id="5ascore">70</span></li>
+		<li class="game game-bottom winner"><span id=5away></span> <span class="score" id="5ascore"></span></li>
 		<li class="spacer">&nbsp;</li>
 		
-		<li class="game game-top "><span id=6home></span> <span class="score" id="6hscore">50</span></li>
+		<li class="game game-top "><span id=6home></span> <span class="score" id="6hscore"></span></li>
 		<li class="game game-spacer">&nbsp;</li>
-		<li class="game game-bottom winner"><span id=6away></span> <span class="score" id="6ascore">66</span></li>
+		<li class="game game-bottom winner"><span id=6away></span> <span class="score" id="6ascore"></span></li>
 		<li class="spacer">&nbsp;</li>
 	</ul>
 	<ul class="round round-3">
 		<li class="spacer">&nbsp;</li>
 		
-		<li class="game game-top winner"><span id=1home></span> <span class="score" id="1hscore">77</span></li>
+		<li class="game game-top winner"><span id=1home></span> <span class="score" id="1hscore"></span></li>
 		<li class="game game-spacer">&nbsp;</li>
-		<li class="game game-bottom "><span id=1away></span> <span class="score" id="1ascore">69</span></li>
+		<li class="game game-bottom "><span id=1away></span> <span class="score" id="1ascore"></span></li>
 		<li class="spacer">&nbsp;</li>
 		
-		<li class="game game-top "><span id=2home></span> <span class="score" id="2hscore">61</span></li>
+		<li class="game game-top "><span id=2home></span> <span class="score" id="2hscore"></span></li>
 		<li class="game game-spacer">&nbsp;</li>
-		<li class="game game-bottom winner"><span id=2away></span> <span class="score" id="2ascore">71</span></li>
+		<li class="game game-bottom winner"><span id=2away></span> <span class="score" id="2ascore"></span></li>
 		<li class="spacer">&nbsp;</li>
 	</ul>
 	<ul class="round round-4">
 		<li class="spacer">&nbsp;</li>
 		
-		<li class="game game-top winner"><span id=0home></span> <span class="score" id="0hscore">85</span></li>
+		<li class="game game-top winner"><span id=0home></span> <span class="score" id="0hscore"></span></li>
 		<li class="game game-spacer">&nbsp;</li>
-		<li class="game game-bottom "><span id=0away></span> <span class="score" id="0ascore">63</span></li>
+		<li class="game game-bottom "><span id=0away></span> <span class="score" id="0ascore"></span></li>
 		
 		<li class="spacer">&nbsp;</li>
 	</ul>		
