--- a/mockup/tourneyView.html
+++ b/mockup/tourneyView.html
@@ -33,7 +33,7 @@
 		<li class="game game-top winner"><span id=11home></span><span class="score"  id="11hscore"></span></li>
 		<li class="game game-spacer">&nbsp;</li>
 
-		<li class="game game-bottom "><span id=11away></span> <span class="score"  id="11score"></span></li>
+		<li class="game game-bottom "><span id=11away></span> <span class="score"  id="11ascore"></span></li>
 
 
 		<li class="spacer">&nbsp;</li>
