--- a/mockup/tourneyView.html
+++ b/mockup/tourneyView.html
@@ -10,27 +10,27 @@
 	<ul class="round round-1">
 		<li class="spacer">&nbsp;</li>
 		
-		<li class="game game-top winner"><span id=7home></span> <span class="score" id="7hscore"></span></li>
+		<li class="game game-top"><span id=7home></span> <span class="score" id="7hscore"></span></li>
 		<li class="game game-spacer">&nbsp;</li>
         <li class="game game-bottom "><span id=7away></span> <span class ="score" id="7ascore"></span></li>
 		<li class="spacer">&nbsp;</li>
 		
-		<li class="game game-top winner"><span id=8home></span> <span class = "score" id="8hscore"></span></li>
+		<li class="game game-top"><span id=8home></span> <span class = "score" id="8hscore"></span></li>
 		<li class="game game-spacer">&nbsp;</li>
 		<li class="game game-bottom "><span id=8away></span> <span class="score" id="8ascore"></span></li>
 		<li class="spacer">&nbsp;</li>
 		
 		<li class="game game-top "><span id=9home></span> <span class="score" id="9hscore"></span></li>
 		<li class="game game-spacer">&nbsp;</li>
-		<li class="game game-bottom winner"><span id=9away></span> <span class ="score"  id="9ascore"></span></li>
+		<li class="game game-bottom"><span id=9away></span> <span class ="score"  id="9ascore"></span></li>
 		<li class="spacer">&nbsp;</li>
 		
-		<li class="game game-top winner"><span id=10home></span> <span class="score"  id="10hscore"></span></li>
+		<li class="game game-top"><span id=10home></span> <span class="score"  id="10hscore"></span></li>
 		<li class="game game-spacer">&nbsp;</li>
 		<li class="game game-bottom "><span id=10away></span><span class="score" id="10ascore"></span></li>
 		<li class="spacer">&nbsp;</li>
 		
-		<li class="game game-top winner"><span id=11home></span><span class="score"  id="11hscore"></span></li>
+		<li class="game game-top"><span id=11home></span><span class="score"  id="11hscore"></span></li>
 		<li class="game game-spacer">&nbsp;</li>
 
 		<li class="game game-bottom "><span id=11away></span> <span class="score"  id="11ascore"></span></li>
@@ -38,17 +38,17 @@
 
 		<li class="spacer">&nbsp;</li>
 		
-		<li class="game game-top winner"><span id=12home></span> <span class="score" id="12hscore"></span></li>
+		<li class="game game-top"><span id=12home></span> <span class="score" id="12hscore"></span></li>
 		<li class="game game-spacer">&nbsp;</li>
 		<li class="game game-bottom "><span id=12away></span> <span class="score" id="12ascore"></span></li>
 		<li class="spacer">&nbsp;</li>
 		
-		<li class="game game-top winner"><span id=13home></span> <span class="score" id="13hscore"></span></li>
+		<li class="game game-top"><span id=13home></span> <span class="score" id="13hscore"></span></li>
 		<li class="game game-spacer">&nbsp;</li>
 		<li class="game game-bottom "><span id=13away></span> <span class="score" id="13ascore"></span></li>
 		<li class="spacer">&nbsp;</li>
 		
-		<li class="game game-top winner"><span id=14home></span><span class="score" id="14hscore"></span></li>
+		<li class="game game-top"><span id=14home></span><span class="score" id="14hscore"></span></li>
 		<li class="game game-spacer">&nbsp;</li>
 		<li class="game game-bottom "><span id=14away></span> <span class="score" id="14ascore"></span></li>
 		<li class="spacer">&nbsp;</li>
@@ -56,43 +56,43 @@
 	<ul class="round round-2">
 		<li class="spacer">&nbsp;</li>
 		
-		<li class="game game-top winner"><span id=3home></span> <span class="score" id="3hscore"></span></li>
+		<li class="game game-top"><span id=3home></span> <span class="score" id="3hscore"></span></li>
 		<li class="game game-spacer">&nbsp;</li>
 		<li class="game game-bottom "><span id=3away></span> <span class="score" id="3ascore"></span></li>
 		<li class="spacer">&nbsp;</li>
 		
-		<li class="game game-top winner"><span id=4home></span> <span class="score" id="4hscore"></span></li>
+		<li class="game game-top"><span id=4home></span> <span class="score" id="4hscore"></span></li>
 		<li class="game game-spacer">&nbsp;</li>
 		<li class="game game-bottom "><span id=4away></span> <span class="score" id="4ascore"></span></li>
 		<li class="spacer">&nbsp;</li>
 		
 		<li class="game game-top "><span id=5home></span> <span class="score" id="5hscore"></span></li>
 		<li class="game game-spacer">&nbsp;</li>
-		<li class="game game-bottom winner"><span id=5away></span> <span class="score" id="5ascore"></span></li>
+		<li class="game game-bottom"><span id=5away></span> <span class="score" id="5ascore"></span></li>
 		<li class="spacer">&nbsp;</li>
 		
 		<li class="game game-top "><span id=6home></span> <span class="score" id="6hscore"></span></li>
 		<li class="game game-spacer">&nbsp;</li>
-		<li class="game game-bottom winner"><span id=6away></span> <span class="score" id="6ascore"></span></li>
+		<li class="game game-bottom"><span id=6away></span> <span class="score" id="6ascore"></span></li>
 		<li class="spacer">&nbsp;</li>
 	</ul>
 	<ul class="round round-3">
 		<li class="spacer">&nbsp;</li>
 		
-		<li class="game game-top winner"><span id=1home></span> <span class="score" id="1hscore"></span></li>
+		<li class="game game-top"><span id=1home></span> <span class="score" id="1hscore"></span></li>
 		<li class="game game-spacer">&nbsp;</li>
 		<li class="game game-bottom "><span id=1away></span> <span class="score" id="1ascore"></span></li>
 		<li class="spacer">&nbsp;</li>
 		
 		<li class="game game-top "><span id=2home></span> <span class="score" id="2hscore"></span></li>
 		<li class="game game-spacer">&nbsp;</li>
-		<li class="game game-bottom winner"><span id=2away></span> <span class="score" id="2ascore"></span></li>
+		<li class="game game-bottom"><span id=2away></span> <span class="score" id="2ascore"></span></li>
 		<li class="spacer">&nbsp;</li>
 	</ul>
 	<ul class="round round-4">
 		<li class="spacer">&nbsp;</li>
 		
-		<li class="game game-top winner"><span id=0home></span> <span class="score" id="0hscore"></span></li>
+		<li class="game game-top"><span id=0home></span> <span class="score" id="0hscore"></span></li>
 		<li class="game game-spacer">&nbsp;</li>
 		<li class="game game-bottom "><span id=0away></span> <span class="score" id="0ascore"></span></li>
 		
