--- a/mockup/tourneyView.html
+++ b/mockup/tourneyView.html
@@ -135,7 +135,6 @@ var service = 'wwp.cs.unc.edu/Courses/426-f16/users/tgreer/getTournament.php?id=
  -->
 
  <!-- Button to open the modal login form -->
-<button onclick="document.getElementById('id01').style.display='block'">Login</button>
 
 <!-- The Modal -->
 <div id="id01" class="modal">
@@ -143,7 +142,7 @@ var service = 'wwp.cs.unc.edu/Courses/426-f16/users/tgreer/getTournament.php?id=
 class="close" title="Close Modal">&times;</span>
 
   <!-- Modal Content -->
-  <form class="modal-content animate" action="action_page.php">
+  <form">
     <div id="hometeam">
     <span id="hometeamname"></span><span id="hometeamscore">Score: <input type="number" id="h1s" required></span> 
     </div>
