--- a/mockup/tourneyView.html
+++ b/mockup/tourneyView.html
@@ -137,9 +137,9 @@ var service = 'wwp.cs.unc.edu/Courses/426-f16/users/tgreer/getTournament.php?id=
  <!-- Button to open the modal login form -->
 
 <!-- The Modal -->
-<div id="id01" class="modal">
+<!-- <div id="id01" class="modal">
   
-  <!-- Modal Content -->
+ 
   <form">
     <div id="hometeam">
     <span id="hometeamname"></span><span id="hometeamscore">Score: <input type="number" id="h1s" required></span> 
@@ -148,5 +148,36 @@ var service = 'wwp.cs.unc.edu/Courses/426-f16/users/tgreer/getTournament.php?id=
     <span id="awayteamname"></span><span id="awayteamscore">Score: <input type="number" id="a1s" required></span> 
     </div>
     <input type="submit" id="submitbutton" value="Submit"> 
+  </form>
+</div> -->
+
+
+<h2>Modal Login Form</h2>
+
+<button onclick="document.getElementById('id01').style.display='block'" style="width:auto;">Login</button>
+
+<div id="id01" class="modal">
+  
+  <form class="modal-content animate" action="action_page.php">
+    <div class="imgcontainer">
+      <span onclick="document.getElementById('id01').style.display='none'" class="close" title="Close Modal">&times;</span>
+      <img src="img_avatar2.png" alt="Avatar" class="avatar">
+    </div>
+
+    <div class="container">
+      <label><b>Username</b></label>
+      <input type="text" placeholder="Enter Username" name="uname" required>
+
+      <label><b>Password</b></label>
+      <input type="password" placeholder="Enter Password" name="psw" required>
+        
+      <button type="submit">Login</button>
+      <input type="checkbox" checked="checked"> Remember me
+    </div>
+
+    <div class="container" style="background-color:#f1f1f1">
+      <button type="button" onclick="document.getElementById('id01').style.display='none'" class="cancelbtn">Cancel</button>
+      <span class="psw">Forgot <a href="#">password?</a></span>
+    </div>
   </form>
 </div>
