--- a/mockup/tourneyView.html
+++ b/mockup/tourneyView.html
@@ -100,6 +100,15 @@
 	</ul>		
 </main>
  <h2>Pool Matches</h2>
+  <form>
+    <div id="hometeam">
+    <span id="hometeamname"></span><span id="hometeamscore"> Home Score: <input type="number" id="h1s" required></span> 
+    </div>
+    <div id="awayteam">
+    <span id="awayteamname"></span><span id="awayteamscore"> Away Score: <input type="number" id="a1s" required></span> 
+    </div>
+    <input type="submit" id="submitbutton" value="Submit"> 
+  </form>
 <div id="pool_container"></div>
 <!-- <script>
 var service = 'wwp.cs.unc.edu/Courses/426-f16/users/tgreer/getTournament.php?id=16';
@@ -138,16 +147,5 @@ var service = 'wwp.cs.unc.edu/Courses/426-f16/users/tgreer/getTournament.php?id=
 
 <!-- The Modal -->
 <div id="id01" class="modal">
-  
- 
-  <form">
-    <div id="hometeam">
-    <span id="hometeamname"></span><span id="hometeamscore"> Home Score: <input type="number" id="h1s" required></span> 
-    </div>
-    <div id="awayteam">
-    <span id="awayteamname"></span><span id="awayteamscore"> Away Score: <input type="number" id="a1s" required></span> 
-    </div>
-    <input type="submit" id="submitbutton" value="Submit"> 
-  </form>
 </div>
 
